...
							onPress={() =>
								router.push("/(authenticated)/(tabs)/(more)/settings")
							}
							className="flex-row items-center gap-3 px-4 py-3"
						>
							<Icon as={Settings} className="text-foreground size-5" />
							<Text className="text-base flex-1">Settings</Text>
							<Icon
								as={ChevronRight}
								className="text-muted-foreground size-5"
							/>
						</Pressable>
					</View>
...
